--- a/index.html
+++ b/index.html
@@ -286,11 +286,21 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Portfolio</h5>
                                 <p class="card-text">My portfolio page hosted on GitHub pages.</p>
-                                <button class="btn btn-coco"
-                                        id="wu"
-                                        onclick="popup('wu', 'Project Details', undefined, undefined, undefined, 'https://github.com/warunaudayanga/warunaudayanga.github.io')">
-                                    View Details
-                                </button>
+                                <div class="btn-pair d-flex gap-3">
+                                    <button class="btn btn-coco"
+                                            id="wu"
+                                            onclick="popup(
+                                            'wu',
+                                            'Project Details',
+                                            undefined,
+                                            undefined,
+                                            undefined,
+                                            'https://github.com/warunaudayanga/warunaudayanga.github.io'
+                                        )">
+                                        View Details
+                                    </button>
+                                    <a class="btn btn-coco mt-auto" href="#home">Open Application</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -300,19 +310,56 @@
                             <img alt="..." class="card-img-top project-thumb" src="resources/images/pos/pos.png">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Simple POS System</h5>
-                                <p class="card-text">A POS System (Point of Sale) with HTML, JSP, CSS, JS + Spring MVC.</p>
-                                <button class="btn btn-dark"
-                                        id="pos"
-                                        onclick="popup(
+                                <p class="card-text">A POS System (Point of Sale) with HTML, JSP, CSS, JS + Spring
+                                    MVC.</p>
+                                <div class="btn-pair d-flex gap-3">
+                                    <button class="btn btn-dark"
+                                            id="pos"
+                                            onclick="popup(
                                                     'pos',
                                                     'Project Details',
-                                                    'View Application',
+                                                    'Open Application',
                                                     'btn-dark',
-                                                    'https://fs-1glm.onrender.com/',
+                                                    'https://fs-1glm.onrender.com',
                                                     'https://github.com/warunaudayanga/FS'
                                                 )">
-                                    View Details
-                                </button>
+                                        View Details
+                                    </button>
+                                    <a class="btn btn-dark mt-auto" href="https://fs-1glm.onrender.com"
+                                       target="_blank">
+                                        Open Application
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
+                            <img alt="..." class="card-img-top project-thumb"
+                                 src="resources/images/lectures/lectures.png">
+                            <div class="card-body d-flex flex-column justify-content-end">
+                                <h5 class="card-title">UOVT Lectures</h5>
+                                <p class="card-text">Simple system to manage lectures, recordings and students</p>
+                                <div class="btn-pair d-flex gap-3">
+                                    <button class="btn btn-blue mt-auto"
+                                            id="lectures"
+                                            onclick="popup(
+                                            'lectures',
+                                            'Project Details',
+                                            'Open Application',
+                                            'btn-blue',
+                                            'https://lectures-frontend.vercel.app',
+                                            'https://github.com/warunaudayanga/lectures-frontend',
+                                            'https://github.com/warunaudayanga/lectures-backend'
+                                        )">
+                                        View Details
+                                    </button>
+                                    <a class="btn btn-blue mt-auto" href="https://lectures-frontend.vercel.app"
+                                       target="_blank">
+                                        Open Application
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -324,18 +371,25 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Curriculum Vitae (CV Generator)</h5>
                                 <p class="card-text">Online CV Generator created with Angular.</p>
-                                <button class="btn btn-sleek-blue mt-auto"
-                                        id="cv"
-                                        onclick="popup(
+                                <div class="btn-pair d-flex gap-3">
+                                    <button class="btn btn-sleek-blue mt-auto"
+                                            id="cv"
+                                            onclick="popup(
                                             'cv',
                                             'Project Details',
-                                            'View Application',
+                                            'Open Application',
                                             'btn-sleek-blue',
-                                            'https://curriculum-vitae-lake.vercel.app/',
+                                            'https://curriculum-vitae-lake.vercel.app',
                                             'https://github.com/warunaudayanga/curriculum-vitae'
                                         )">
-                                    View Details
-                                </button>
+                                        View Details
+                                    </button>
+                                    <a class="btn btn-sleek-blue mt-auto"
+                                       href="https://curriculum-vitae-lake.vercel.app"
+                                       target="_blank">
+                                        Open Application
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -346,11 +400,12 @@
                                  src="resources/images/compareme/compareme.png">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">CompareMe</h5>
-                                <p class="card-text">PHP + jQuery Website for Comparing Devices (Mobiles, Laptops, etc.).</p>
+                                <p class="card-text">PHP + jQuery Website for Comparing Devices (Mobiles, Laptops,
+                                    etc.).</p>
                                 <!--suppress HttpUrlsUsage -->
                                 <button class="btn btn-dark"
                                         id="compare_me"
-                                        onclick="popup('compareme', 'Project Details', 'View Website', 'btn-dark', 'http://compareme.tk/')">
+                                        onclick="popup('compareme', 'Project Details')">
                                     View Details
                                 </button>
                             </div>
@@ -374,25 +429,26 @@
 
                 <div class="d-md-flex gap-4 mb-4">
                     <div class="d-flex gap-2 align-items-center mb-3">
-                        <img src="resources/images/logos/github.png" class="img-logo" alt="image-001">
+                        <img alt="image-001" class="img-logo" src="resources/images/logos/github.png">
                         <a href="https://github.com/hichchidev" target="_blank">hichchidev</a>
                     </div>
                     <div class="d-flex gap-2 align-items-center mb-3">
-                        <img src="resources/images/logos/npm.png" class="img-logo" alt="image-001">
+                        <img alt="image-001" class="img-logo" src="resources/images/logos/npm.png">
                         <a href="https://www.npmjs.com/~hichchidev" target="_blank">hichchidev</a>
                     </div>
                     <div class="d-flex gap-2 align-items-center mb-3">
-                        <img src="resources/images/logos/facebook.png" class="img-logo" alt="image-001">
+                        <img alt="image-001" class="img-logo" src="resources/images/logos/facebook.png">
                         <a href="https://web.facebook.com/profile.php?id=100094731325069" target="_blank">hichchidev</a>
                     </div>
                     <div class="d-flex gap-2 align-items-center mb-3">
-                        <img src="resources/images/logos/gmail.png" class="img-logo" alt="image-001">
+                        <img alt="image-001" class="img-logo" src="resources/images/logos/gmail.png">
                         <a href="mailto:hichchidev@gmail.com">hichchidev@gmail.com</a>
                     </div>
                 </div>
 
                 <h5 class="mb-5">
-                    Here are my ongoing projects for npm packages. Documentation may not be available as these projects are still in progress.
+                    Here are my ongoing projects for npm packages. Documentation may not be available as these projects
+                    are still in progress.
                 </h5>
 
                 <div class="row">
@@ -405,11 +461,12 @@
 
                                 <div class="d-flex gap-4 small">
                                     <div class="d-flex gap-2 align-items-center mb-3">
-                                        <img src="resources/images/logos/github.png" class="img-logo-sm" alt="image-001">
+                                        <img alt="image-001" class="img-logo-sm"
+                                             src="resources/images/logos/github.png">
                                         <a href="https://github.com/hichchidev/hichchi-utills" target="_blank">hichchi-utils</a>
                                     </div>
                                     <div class="d-flex gap-2 align-items-center mb-3">
-                                        <img src="resources/images/logos/npm.png" class="img-logo-sm" alt="image-001">
+                                        <img alt="image-001" class="img-logo-sm" src="resources/images/logos/npm.png">
                                         <a href="https://www.npmjs.com/package/hichchi-utils" target="_blank">hichchi-utils</a>
                                     </div>
                                 </div>
@@ -425,12 +482,15 @@
 
                                 <div class="d-flex gap-4 small">
                                     <div class="d-flex gap-2 align-items-center mb-3">
-                                        <img src="resources/images/logos/github.png" class="img-logo-sm" alt="image-001">
-                                        <a href="https://github.com/hichchidev/ngx-hichchi" target="_blank">ngx-hichchi</a>
+                                        <img alt="image-001" class="img-logo-sm"
+                                             src="resources/images/logos/github.png">
+                                        <a href="https://github.com/hichchidev/ngx-hichchi"
+                                           target="_blank">ngx-hichchi</a>
                                     </div>
                                     <div class="d-flex gap-2 align-items-center mb-3">
-                                        <img src="resources/images/logos/npm.png" class="img-logo-sm" alt="image-001">
-                                        <a href="https://www.npmjs.com/package/ngx-hichchi" target="_blank">ngx-hichchi</a>
+                                        <img alt="image-001" class="img-logo-sm" src="resources/images/logos/npm.png">
+                                        <a href="https://www.npmjs.com/package/ngx-hichchi"
+                                           target="_blank">ngx-hichchi</a>
                                     </div>
                                 </div>
                             </div>
@@ -453,12 +513,16 @@
                                     <p class="card-text">Common utils library for Hichchi NestJs libraries</p>
                                     <div class="d-flex gap-4">
                                         <div class="d-flex gap-2 align-items-center mb-3">
-                                            <img src="resources/images/logos/github.png" class="img-logo-sm" alt="image-001">
-                                            <a href="https://github.com/hichchidev/hichchi-nestjs-common" target="_blank">hichchi-nestjs-common</a>
+                                            <img alt="image-001" class="img-logo-sm"
+                                                 src="resources/images/logos/github.png">
+                                            <a href="https://github.com/hichchidev/hichchi-nestjs-common"
+                                               target="_blank">hichchi-nestjs-common</a>
                                         </div>
                                         <div class="d-flex gap-2 align-items-center mb-3">
-                                            <img src="resources/images/logos/npm.png" class="img-logo-sm" alt="image-001">
-                                            <a href="https://www.npmjs.com/package/hichchi-nestjs-common" target="_blank">hichchi-nestjs-common</a>
+                                            <img alt="image-001" class="img-logo-sm"
+                                                 src="resources/images/logos/npm.png">
+                                            <a href="https://www.npmjs.com/package/hichchi-nestjs-common"
+                                               target="_blank">hichchi-nestjs-common</a>
                                         </div>
                                     </div>
                                 </div>
@@ -469,11 +533,13 @@
                                     <p class="card-text">Authentication library for NestJs projects</p>
                                     <div class="d-flex gap-4">
                                         <div class="d-flex gap-2 align-items-center mb-3">
-                                            <img src="resources/images/logos/github.png" class="img-logo-sm" alt="image-001">
+                                            <img alt="image-001" class="img-logo-sm"
+                                                 src="resources/images/logos/github.png">
                                             <a href="https://github.com/hichchidev/hichchi-nestjs-auth" target="_blank">hichchi-nestjs-auth</a>
                                         </div>
                                         <div class="d-flex gap-2 align-items-center mb-3">
-                                            <img src="resources/images/logos/npm.png" class="img-logo-sm" alt="image-001">
+                                            <img alt="image-001" class="img-logo-sm"
+                                                 src="resources/images/logos/npm.png">
                                             <a href="https://www.npmjs.com/package/hichchi-nestjs-auth" target="_blank">hichchi-nestjs-auth</a>
                                         </div>
                                     </div>
@@ -485,11 +551,13 @@
                                     <p class="card-text">ORM library for NestJs projects (Using TypeORM)</p>
                                     <div class="d-flex gap-4">
                                         <div class="d-flex gap-2 align-items-center mb-3">
-                                            <img src="resources/images/logos/github.png" class="img-logo-sm" alt="image-001">
+                                            <img alt="image-001" class="img-logo-sm"
+                                                 src="resources/images/logos/github.png">
                                             <a href="https://github.com/hichchidev/hichchi-nestjs-crud" target="_blank">hichchi-nestjs-crud</a>
                                         </div>
                                         <div class="d-flex gap-2 align-items-center mb-3">
-                                            <img src="resources/images/logos/npm.png" class="img-logo-sm" alt="image-001">
+                                            <img alt="image-001" class="img-logo-sm"
+                                                 src="resources/images/logos/npm.png">
                                             <a href="https://www.npmjs.com/package/hichchi-nestjs-crud" target="_blank">hichchi-nestjs-crud</a>
                                         </div>
                                     </div>
